test_scripts/errors/list_too_many_args.shm
// list() takes at most one iterable argument.
let l = list([1], [2])
